--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,6 +26,13 @@ body {
   align-items: center;
 }
 
+.main {
+  width: 100vw;
+  height: 100vh;
+  background: whitesmoke;
+  padding: 2%;
+}
+
 .countries {
   /* margin-bottom: 8rem; */
   display: flex;
