--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,43 +10,57 @@ html {
 }
 
 body {
+  overflow: hidden;
   font-family: system-ui;
   color: #555;
   background-color: #f7f7f7;
   min-height: 100vh;
-
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .container {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .main {
   width: 100vw;
   height: 100vh;
   background: whitesmoke;
-  padding: 2%;
 }
+
+/* .navigation {
+  width: 20rem;
+  height: 100vh;
+  background: #000;
+  border: #555;
+} */
 
 .countries {
   /* margin-bottom: 8rem; */
   display: flex;
-
   font-size: 2rem;
   opacity: 0;
   transition: opacity 1s;
+}
+
+.map {
+  width: 80%;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
+  font-size: 1.8rem;
+  border-radius: 0.7rem;
+  margin: 0 3rem;
 }
 
 .country {
   background-color: #fff;
   box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
   font-size: 1.8rem;
-  width: 30rem;
+  width: 40rem;
   border-radius: 0.7rem;
   margin: 0 3rem;
   /* overflow: hidden; */
@@ -71,8 +85,8 @@ body {
 }
 
 .country__img {
-  width: 30rem;
-  height: 17rem;
+  width: 40rem;
+  height: 20rem;
   object-fit: cover;
   background-color: #eee;
   border-top-left-radius: 0.7rem;
